Added basic components and styling

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flappy Bird Example</title>
+
+    <!-- Linking CSS Style Sheet -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Linking JavaScript file --> 
+    <script src="script.js"></script>
 </head>
 <body>
+
+    <!-- Container for entire game window -->
+    <div class="game-container">
+
+        <!-- Div for the sky -->
+        <div class="sky">
+            <!-- Div for Bird inside game window -->
+            <div class="bird"></div>
+        </div>
+
+        <!-- Div for the ground -->
+        <div class="ground"></div>
+
+    </div>
+
     
 </body>
 </html>
